--- a/Web/index.html
+++ b/Web/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JoinNify</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html data-theme="light" lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="" />
+  <link rel="stylesheet" href="./main.styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="./assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+  <title>JoinNify</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
